# django-extended-dates

./: .gitignore  LICENSE  README.md  pyproject.toml
django_extended_dates/: __init__.py  fields.py  forms.py
tests/: models.py  test_fields.py
